# clippy

./: README.md  clippy-test  com.endlessm.Clippy.Extension.json.in  com.endlessm.Clippy.json  com.endlessm.Clippy.json.in  com.hack_computer.Clippy.Extension.json.in  meson.build  meson_options.txt  org.gtk.Gtk3module.Clippy.json
data/: com.endlessm.Clippy.Extension.appdata.xml  flatpak-overrides  meson.build
examples/: api_test.sh  clippy-js-test.c  js_test.sh  meson.build  wrapper_client.js
src/: clippify.js  clippy-dbus-wrapper.c  clippy-dbus-wrapper.h  clippy-js-proxy.c  clippy-js-proxy.h  clippy-version.h.in  clippy.c  clippy.gresource.xml  dbus.xml  meson.build  style.css  utils.c  utils.h  webkit-marshal.c  webkit-marshal.h
